--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,108 +1,110 @@
 .i {
-    display: flex;
-    height: 100vh;
-    /* background-color:#697a21 ; */
+   display: flex;
+   height: 100vh;
 }
 
 .i-left {
-    flex:1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   flex: 1;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 30px;
 }
 .i-right {
-    flex:1;
-    background-color: black;
-    position:relative;
-
+   flex: 1;
+   background-color: black;
+   position: relative;
 }
 .i-left-wrapper {
-    padding: 70px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+   padding: 70px;
+   height: 50%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
 }
 .i-intro {
-    font-size:50px;
+   font-size: 50px;
 }
 .i-name {
-    font-size: 80px;
-    font:bolder;
+   font-size: 80px;
+   font: bolder;
 }
 
 .i-title {
-    height: 50px;
-    overflow: hidden;
+   height: 50px;
+   overflow: hidden;
 }
-.i-title-wrapper{
-    height: 100%;
-    animation: move 10s ease-in-out infinite alternate;
+.i-title-wrapper {
+   height: 100%;
+   animation: move 10s ease-in-out infinite
+      alternate;
 }
 
 @keyframes move {
-    25%{
-        transform: translateY(-50px);
-    }
-    50%{
-        transform: translateY(-100px);
-    }
-    75%{
-        transform: translateY(-150px);
-    }
-    100%{
-        transform: translateY(-200px);
-    }
+   25% {
+      transform: translateY(-50px);
+   }
+   50% {
+      transform: translateY(-100px);
+   }
+   75% {
+      transform: translateY(-150px);
+   }
+   100% {
+      transform: translateY(-200px);
+   }
 }
 .i-title-item {
-    height: 50px;
-    font-size: 40px;
-    font-weight:bold ;
-    color:#697A21;
-    display: flex;
-    align-items: center;
+   height: 50px;
+   font-size: 40px;
+   font-weight: bold;
+   color: #697a21;
+   display: flex;
+   align-items: center;
 }
 .i-desc {
-    height: 50px;
-    font-size: 20px;
+   height: 50px;
+   font-size: 20px;
 }
-.i-q{
-    font-size: 40px;
-    font-weight: bold;
-    /* padding: 10px; */
-    width: 50%;
-    height: 50%
-}
+/* .i-q {
+   font-size: 40px;
+   font-weight: bold;
+   /* padding: 10px; */
+/* width: 50%; */
+/* height: 50%; */
+
 .i-image {
-   
-    height:100%;
-    position: absolute;
+   height: 100%;
+   position: absolute;
 }
 .i-bg {
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    background-color: #94849B;
-    opacity: 50%;
-    width:100%;
-    height: 100%;
-    position:absolute;
-    top:0;
-    right:0; 
+   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+   background-color: #94849b;
+   opacity: 50%;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   right: 0;
 }
 
-
-
-@media screen and (max-width: 480px){
-    .i{
-        flex-direction: column;
-    }
-    .i-left-wrapper{
-        padding: 10px;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100%
-    }
-    .i-desc{
-        display: none;
-    }
+@media screen and (max-width: 480px) {
+   .i {
+      flex-direction: column;
+   }
+   .i-left-wrapper {
+      padding: 10px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100%;
+   }
+   .i-desc {
+      display: none;
+   }
+   .i-q {
+      display: none;
+   }
+   .i-right {
+   }
 }
