--- a/src/components/toggle/toggle.css
+++ b/src/components/toggle/toggle.css
@@ -1,19 +1,18 @@
-.t{
-    width: 80px;
-    height: 25px;
-    border-radius: 20px;
-    border: 1px solid #999;
-    background-color: #fff;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 999;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.t {
+   width: 80px;
+   height: 25px;
+   border-radius: 20px;
+   border: 1px solid #999;
+   background-color: #fff;
+   position: absolute;
+   z-index: 999;
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+   /* overflow: hidden; */
 }
-.light{
-    color:black
+.light {
+   color: black;
 }
 /* .dark{
     background-color: black;
@@ -21,11 +20,11 @@
     color: white;
     
 } */
-.t-button{
-    width: 40px;
-    height: 25px;
-    border-radius: 50px;
-    background-color: #999;
-    position: absolute;
-    cursor: pointer;
+.t-button {
+   width: 40px;
+   height: 25px;
+   border-radius: 50px;
+   background-color: #999;
+   position: absolute;
+   cursor: pointer;
 }
