--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@300&family=Noto+Sans+Meroitic&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@300&family=Noto+Sans+Meroitic&display=swap");
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+   /* margin: 10px 10px; */
+   font-family: -apple-system, BlinkMacSystemFont,
+      "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+      "Cantarell", "Fira Sans", "Droid Sans",
+      "Helvetica Neue", sans-serif;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   background: #232020;
 }
-.custom{
-  margin: 0;
-  font-family: 'Noto Sans Meroitic', sans-serif;
-  background-color:#697A21 ;
- }
+/* .custom {
+   margin: 0;
+   font-family: "Noto Sans Meroitic", sans-serif;
+   background-color: #697a21;
+} */
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+   font-family: source-code-pro, Menlo, Monaco,
+      Consolas, "Courier New", monospace;
 }
